# ai-invention-d509fc-curl-in-the-citation-graph-hodge-flow-de

./: README.md
chat/messages/: README.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  pdf_to_png.py  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md  gen_viz_4.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_experiment_1.md  gen_demo_art_experiment_2.md
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  adjacency_matrix.npz  build_from_stage2.py  collect_data.py  data.py  data_out.json  fix_suppression.py  ground_truth_labels.json  journal_metadata.json  make_data_out.py  match_report.json  mini_data_out.json  preview_data_out.json  pyproject.toml  test_mini.py
round-1/experiment-1/: README.md
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/experiment-1/src/data/: suppressed_journals.json
round-1/experiment-1/src/results/: confound_test.json  detailed_results.json  synthetic_injection.json
round-1/research-1/: README.md
round-2/experiment-1/: README.md
round-2/research-1/: README.md
(+89 files in other folders)
