[project]
name = "gen-art-dataset-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "et_xmlfile==2.0.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "numpy==2.5.1",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "python-dateutil==2.9.0.post0",
    "rapidfuzz==3.14.5",
    "requests==2.34.2",
    "scipy==1.18.0",
    "six==1.17.0",
    "soupsieve==2.8.4",
    "tenacity==9.1.4",
    "typing_extensions==4.16.0",
    "urllib3==2.7.0",
    "yarl==1.24.2",
]
