[project]
name = "hodge-curl-cartel-detector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "multidict==6.7.1",
    "narwhals==2.23.0",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "packaging==26.2",
    "pillow==12.3.0",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-louvain==0.16",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.68.4",
    "typing-extensions==4.16.0",
    "urllib3==2.7.0",
    "yarl==1.24.2",
]
